src/snapshots/cargo_semver_checks__query__tests__repr_c_removed.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/repr_c_removed/": [
        {
            "name": String("CEnumToEnum"),
            "old_attr": String("#[repr(C)]"),
            "owner_type": String("Enum"),
            "path": List([
                String("repr_c_removed"),
                String("CEnumToEnum"),
            ]),
            "span_begin_line": Uint64(1),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("U8CEnumToU8Enum"),
            "old_attr": String("#[repr(u8, C)]"),
            "owner_type": String("Enum"),
            "path": List([
                String("repr_c_removed"),
                String("U8CEnumToU8Enum"),
            ]),
            "span_begin_line": Uint64(6),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("SeparateU8CEnumToU8Enum"),
            "old_attr": String("#[repr(C)]"),
            "owner_type": String("Enum"),
            "path": List([
                String("repr_c_removed"),
                String("SeparateU8CEnumToU8Enum"),
            ]),
            "span_begin_line": Uint64(12),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("CU8EnumToU8Enum"),
            "old_attr": String("#[repr(C, u8)]"),
            "owner_type": String("Enum"),
            "path": List([
                String("repr_c_removed"),
                String("CU8EnumToU8Enum"),
            ]),
            "span_begin_line": Uint64(18),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("SeparateCU8EnumToU8Enum"),
            "old_attr": String("#[repr(C)]"),
            "owner_type": String("Enum"),
            "path": List([
                String("repr_c_removed"),
                String("SeparateCU8EnumToU8Enum"),
            ]),
            "span_begin_line": Uint64(24),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("CStructToStruct"),
            "old_attr": String("#[repr(C)]"),
            "owner_type": String("Struct"),
            "path": List([
                String("repr_c_removed"),
                String("CStructToStruct"),
            ]),
            "span_begin_line": Uint64(86),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("Align16CStructToAlign16Struct"),
            "old_attr": String("#[repr(align(16), C)]"),
            "owner_type": String("Struct"),
            "path": List([
                String("repr_c_removed"),
                String("Align16CStructToAlign16Struct"),
            ]),
            "span_begin_line": Uint64(91),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("SeparateAlign16CStructToAlign16Struct"),
            "old_attr": String("#[repr(C)]"),
            "owner_type": String("Struct"),
            "path": List([
                String("repr_c_removed"),
                String("SeparateAlign16CStructToAlign16Struct"),
            ]),
            "span_begin_line": Uint64(96),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("CAlign16StructToAlign16Struct"),
            "old_attr": String("#[repr(C, align(16))]"),
            "owner_type": String("Struct"),
            "path": List([
                String("repr_c_removed"),
                String("CAlign16StructToAlign16Struct"),
            ]),
            "span_begin_line": Uint64(101),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("CUnionToUnion"),
            "old_attr": String("#[repr(C)]"),
            "owner_type": String("Union"),
            "path": List([
                String("repr_c_removed"),
                String("CUnionToUnion"),
            ]),
            "span_begin_line": Uint64(105),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("Align16CUnionToAlign16Union"),
            "old_attr": String("#[repr(align(16), C)]"),
            "owner_type": String("Union"),
            "path": List([
                String("repr_c_removed"),
                String("Align16CUnionToAlign16Union"),
            ]),
            "span_begin_line": Uint64(110),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("SeparateAlign16CUnionToAlign16Union"),
            "old_attr": String("#[repr(C)]"),
            "owner_type": String("Union"),
            "path": List([
                String("repr_c_removed"),
                String("SeparateAlign16CUnionToAlign16Union"),
            ]),
            "span_begin_line": Uint64(115),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("CAlign16UnionToAlign16Union"),
            "old_attr": String("#[repr(C, align(16))]"),
            "owner_type": String("Union"),
            "path": List([
                String("repr_c_removed"),
                String("CAlign16UnionToAlign16Union"),
            ]),
            "span_begin_line": Uint64(120),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
}
