src/snapshots/cargo_semver_checks__query__tests__repr_packed_removed.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/repr_packed_added_removed/": [
        {
            "name": String("StructBecomesUnpacked"),
            "path": List([
                String("repr_packed_added_removed"),
                String("StructBecomesUnpacked"),
            ]),
            "span_begin_line": Uint64(6),
            "span_filename": String("src/lib.rs"),
            "type": String("Struct"),
        },
        {
            "name": String("UnionBecomesUnpacked"),
            "path": List([
                String("repr_packed_added_removed"),
                String("UnionBecomesUnpacked"),
            ]),
            "span_begin_line": Uint64(36),
            "span_filename": String("src/lib.rs"),
            "type": String("Union"),
        },
    ],
}
