src/snapshots/cargo_semver_checks__query__tests__sized_impl_removed.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/sized_impl_removed/": [
        {
            "name": String("SizedStruct"),
            "path": List([
                String("sized_impl_removed"),
                String("SizedStruct"),
            ]),
            "span_begin_line": Uint64(1),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
}
