src/snapshots/cargo_semver_checks__query__tests__struct_marked_non_exhaustive.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/non_exhaustive/": [
        {
            "name": String("UnitStruct"),
            "path": List([
                String("non_exhaustive"),
                String("UnitStruct"),
            ]),
            "span_begin_line": Uint64(12),
            "span_filename": String("src/lib.rs"),
            "struct_type": String("unit"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("TupleStruct"),
            "path": List([
                String("non_exhaustive"),
                String("TupleStruct"),
            ]),
            "span_begin_line": Uint64(15),
            "span_filename": String("src/lib.rs"),
            "struct_type": String("tuple"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("ExternallyConstructibleStruct"),
            "path": List([
                String("non_exhaustive"),
                String("ExternallyConstructibleStruct"),
            ]),
            "span_begin_line": Uint64(18),
            "span_filename": String("src/lib.rs"),
            "struct_type": String("plain"),
            "visibility_limit": String("public"),
        },
    ],
    "./test_crates/tuple_struct_to_plain_struct/": [
        {
            "name": String("TupleToNonExhaustivePlainStruct"),
            "path": List([
                String("tuple_struct_to_plain_struct"),
                String("TupleToNonExhaustivePlainStruct"),
            ]),
            "span_begin_line": Uint64(41),
            "span_filename": String("src/lib.rs"),
            "struct_type": String("plain"),
            "visibility_limit": String("public"),
        },
    ],
}
