src/snapshots/cargo_semver_checks__query__tests__struct_missing.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/move_item_and_reexport/": [
        {
            "name": String("NonEquivalentReorderedGenerics"),
            "path": List([
                String("move_item_and_reexport"),
                String("NonEquivalentReorderedGenerics"),
            ]),
            "span_begin_line": Uint64(38),
            "span_filename": String("src/lib.rs"),
            "struct_type": String("plain"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("NonEquivalentRemovedLifetime"),
            "path": List([
                String("move_item_and_reexport"),
                String("NonEquivalentRemovedLifetime"),
            ]),
            "span_begin_line": Uint64(42),
            "span_filename": String("src/lib.rs"),
            "struct_type": String("plain"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("NonEquivalentRemovedConst"),
            "path": List([
                String("move_item_and_reexport"),
                String("NonEquivalentRemovedConst"),
            ]),
            "span_begin_line": Uint64(46),
            "span_filename": String("src/lib.rs"),
            "struct_type": String("plain"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("NonEquivalentRemovedType"),
            "path": List([
                String("move_item_and_reexport"),
                String("NonEquivalentRemovedType"),
            ]),
            "span_begin_line": Uint64(50),
            "span_filename": String("src/lib.rs"),
            "struct_type": String("plain"),
            "visibility_limit": String("public"),
        },
    ],
    "./test_crates/repr_packed_added_removed/": [
        {
            "name": String("StructBecomesPackedAndPrivate"),
            "path": List([
                String("repr_packed_added_removed"),
                String("StructBecomesPackedAndPrivate"),
            ]),
            "span_begin_line": Uint64(9),
            "span_filename": String("src/lib.rs"),
            "struct_type": String("unit"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("StructBecomesUnpackedAndPrivate"),
            "path": List([
                String("repr_packed_added_removed"),
                String("StructBecomesUnpackedAndPrivate"),
            ]),
            "span_begin_line": Uint64(13),
            "span_filename": String("src/lib.rs"),
            "struct_type": String("unit"),
            "visibility_limit": String("public"),
        },
    ],
    "./test_crates/struct_missing/": [
        {
            "name": String("WillBeRemovedStruct"),
            "path": List([
                String("struct_missing"),
                String("WillBeRemovedStruct"),
            ]),
            "span_begin_line": Uint64(1),
            "span_filename": String("src/lib.rs"),
            "struct_type": String("unit"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("PubUseRemovedStruct"),
            "path": List([
                String("struct_missing"),
                String("PubUseRemovedStruct"),
            ]),
            "span_begin_line": Uint64(4),
            "span_filename": String("src/lib.rs"),
            "struct_type": String("unit"),
            "visibility_limit": String("public"),
        },
    ],
    "./test_crates/struct_now_doc_hidden/": [
        {
            "name": String("PublicStructThatGoesPrivate"),
            "path": List([
                String("struct_now_doc_hidden"),
                String("PublicStructThatGoesPrivate"),
            ]),
            "span_begin_line": Uint64(34),
            "span_filename": String("src/lib.rs"),
            "struct_type": String("unit"),
            "visibility_limit": String("public"),
        },
    ],
    "./test_crates/struct_pub_field_missing/": [
        {
            "name": String("StructRemoved"),
            "path": List([
                String("struct_pub_field_missing"),
                String("StructRemoved"),
            ]),
            "span_begin_line": Uint64(11),
            "span_filename": String("src/lib.rs"),
            "struct_type": String("plain"),
            "visibility_limit": String("public"),
        },
    ],
    "./test_crates/switch_to_reexport_as_underscore/": [
        {
            "name": String("Struct"),
            "path": List([
                String("switch_to_reexport_as_underscore"),
                String("Struct"),
            ]),
            "span_begin_line": Uint64(4),
            "span_filename": String("src/lib.rs"),
            "struct_type": String("plain"),
            "visibility_limit": String("public"),
        },
    ],
}
