src/snapshots/cargo_semver_checks__query__tests__struct_must_use_added.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/struct_must_use_added/": [
        {
            "name": String("StructToMustUseStruct"),
            "new_attr": String("#[must_use]"),
            "path": List([
                String("struct_must_use_added"),
                String("StructToMustUseStruct"),
            ]),
            "span_begin_line": Uint64(5),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("StructToMustUseMessageStruct"),
            "new_attr": String("#[must_use = \"Foo\"]"),
            "path": List([
                String("struct_must_use_added"),
                String("StructToMustUseMessageStruct"),
            ]),
            "span_begin_line": Uint64(10),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
}
