src/snapshots/cargo_semver_checks__query__tests__struct_now_doc_hidden.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/struct_now_doc_hidden/": [
        {
            "path": List([
                String("struct_now_doc_hidden"),
                String("MyPublicMod"),
                String("MyStruct"),
            ]),
            "span_begin_line": Uint64(13),
            "span_filename": String("src/lib.rs"),
            "struct_name": String("MyStruct"),
        },
        {
            "path": List([
                String("struct_now_doc_hidden"),
                String("MyNestedPublicMod"),
                String("PublicInnerMod"),
                String("MyStruct"),
            ]),
            "span_begin_line": Uint64(38),
            "span_filename": String("src/lib.rs"),
            "struct_name": String("MyStruct"),
        },
        {
            "path": List([
                String("struct_now_doc_hidden"),
                String("Example"),
            ]),
            "span_begin_line": Uint64(47),
            "span_filename": String("src/lib.rs"),
            "struct_name": String("Example"),
        },
    ],
    "./test_crates/struct_pub_field_now_doc_hidden/": [
        {
            "path": List([
                String("struct_pub_field_now_doc_hidden"),
                String("BothBecomeHidden"),
            ]),
            "span_begin_line": Uint64(15),
            "span_filename": String("src/lib.rs"),
            "struct_name": String("BothBecomeHidden"),
        },
    ],
    "./test_crates/type_hidden_from_public_api/": [
        {
            "path": List([
                String("type_hidden_from_public_api"),
                String("ExamplePlainStruct"),
            ]),
            "span_begin_line": Uint64(2),
            "span_filename": String("src/lib.rs"),
            "struct_name": String("ExamplePlainStruct"),
        },
        {
            "path": List([
                String("type_hidden_from_public_api"),
                String("ExampleTupleStruct"),
            ]),
            "span_begin_line": Uint64(7),
            "span_filename": String("src/lib.rs"),
            "struct_name": String("ExampleTupleStruct"),
        },
        {
            "path": List([
                String("type_hidden_from_public_api"),
                String("ExampleUnitStruct"),
            ]),
            "span_begin_line": Uint64(10),
            "span_filename": String("src/lib.rs"),
            "struct_name": String("ExampleUnitStruct"),
        },
    ],
}
