src/snapshots/cargo_semver_checks__query__tests__struct_pub_field_missing.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/struct_pub_field_missing/": [
        {
            "field_name": String("bar"),
            "path": List([
                String("struct_pub_field_missing"),
                String("FieldWillBeRemoved"),
            ]),
            "span_begin_line": Uint64(5),
            "span_filename": String("src/lib.rs"),
            "struct_name": String("FieldWillBeRemoved"),
            "struct_type": String("plain"),
        },
    ],
}
