src/snapshots/cargo_semver_checks__query__tests__struct_pub_field_now_doc_hidden.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/struct_now_doc_hidden/": [
        {
            "field_name": String("my_field"),
            "path": List([
                String("struct_now_doc_hidden"),
                String("PublicStructHiddenField"),
            ]),
            "span_begin_line": Uint64(49),
            "span_filename": String("src/lib.rs"),
            "struct_name": String("PublicStructHiddenField"),
        },
    ],
    "./test_crates/struct_pub_field_now_doc_hidden/": [
        {
            "field_name": String("field"),
            "path": List([
                String("struct_pub_field_now_doc_hidden"),
                String("Plain"),
            ]),
            "span_begin_line": Uint64(1),
            "span_filename": String("src/lib.rs"),
            "struct_name": String("Plain"),
        },
        {
            "field_name": String("0"),
            "path": List([
                String("struct_pub_field_now_doc_hidden"),
                String("Tuple"),
            ]),
            "span_begin_line": Uint64(6),
            "span_filename": String("src/lib.rs"),
            "struct_name": String("Tuple"),
        },
        {
            "field_name": String("field"),
            "path": List([
                String("struct_pub_field_now_doc_hidden"),
                String("BothBecomeHidden"),
            ]),
            "span_begin_line": Uint64(15),
            "span_filename": String("src/lib.rs"),
            "struct_name": String("BothBecomeHidden"),
        },
    ],
}
