src/snapshots/cargo_semver_checks__query__tests__struct_repr_transparent_removed.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/struct_repr_transparent_removed/": [
        {
            "name": String("Foo"),
            "old_attr": String("#[repr(transparent)]"),
            "path": List([
                String("struct_repr_transparent_removed"),
                String("Foo"),
            ]),
            "span_begin_line": Uint64(1),
            "span_filename": String("src/lib.rs"),
            "transparent_field_name": List([
                String("bar"),
            ]),
            "visibility_limit": String("public"),
        },
        {
            "name": String("Bar"),
            "old_attr": String("#[repr(transparent)]"),
            "path": List([
                String("struct_repr_transparent_removed"),
                String("Bar"),
            ]),
            "span_begin_line": Uint64(5),
            "span_filename": String("src/lib.rs"),
            "transparent_field_name": List([
                String("0"),
            ]),
            "visibility_limit": String("public"),
        },
        {
            "name": String("WithZeroSizedData"),
            "old_attr": String("#[repr(transparent)]"),
            "path": List([
                String("struct_repr_transparent_removed"),
                String("WithZeroSizedData"),
            ]),
            "span_begin_line": Uint64(7),
            "span_filename": String("src/lib.rs"),
            "transparent_field_name": List([
                String("bar"),
            ]),
            "visibility_limit": String("public"),
        },
        {
            "name": String("TupleWithZeroSizedData"),
            "old_attr": String("#[repr(transparent)]"),
            "path": List([
                String("struct_repr_transparent_removed"),
                String("TupleWithZeroSizedData"),
            ]),
            "span_begin_line": Uint64(12),
            "span_filename": String("src/lib.rs"),
            "transparent_field_name": List([
                String("0"),
            ]),
            "visibility_limit": String("public"),
        },
        {
            "name": String("WithPubZeroSizedData"),
            "old_attr": String("#[repr(transparent)]"),
            "path": List([
                String("struct_repr_transparent_removed"),
                String("WithPubZeroSizedData"),
            ]),
            "span_begin_line": Uint64(14),
            "span_filename": String("src/lib.rs"),
            "transparent_field_name": List([
                String("bar"),
            ]),
            "visibility_limit": String("public"),
        },
        {
            "name": String("WithSpecificZeroSizedData"),
            "old_attr": String("#[repr(transparent)]"),
            "path": List([
                String("struct_repr_transparent_removed"),
                String("WithSpecificZeroSizedData"),
            ]),
            "span_begin_line": Uint64(19),
            "span_filename": String("src/lib.rs"),
            "transparent_field_name": List([
                String("bar"),
            ]),
            "visibility_limit": String("public"),
        },
        {
            "name": String("WithFoo"),
            "old_attr": String("#[repr(transparent)]"),
            "path": List([
                String("struct_repr_transparent_removed"),
                String("WithFoo"),
            ]),
            "span_begin_line": Uint64(24),
            "span_filename": String("src/lib.rs"),
            "transparent_field_name": List([
                String("bar"),
            ]),
            "visibility_limit": String("public"),
        },
        {
            "name": String("WithRef"),
            "old_attr": String("#[repr(transparent)]"),
            "path": List([
                String("struct_repr_transparent_removed"),
                String("WithRef"),
            ]),
            "span_begin_line": Uint64(29),
            "span_filename": String("src/lib.rs"),
            "transparent_field_name": List([
                String("bar"),
            ]),
            "visibility_limit": String("public"),
        },
        {
            "name": String("WithTuple"),
            "old_attr": String("#[repr(transparent)]"),
            "path": List([
                String("struct_repr_transparent_removed"),
                String("WithTuple"),
            ]),
            "span_begin_line": Uint64(34),
            "span_filename": String("src/lib.rs"),
            "transparent_field_name": List([
                String("bar"),
            ]),
            "visibility_limit": String("public"),
        },
        {
            "name": String("WithGeneric"),
            "old_attr": String("#[repr(transparent)]"),
            "path": List([
                String("struct_repr_transparent_removed"),
                String("WithGeneric"),
            ]),
            "span_begin_line": Uint64(39),
            "span_filename": String("src/lib.rs"),
            "transparent_field_name": List([
                String("bar"),
            ]),
            "visibility_limit": String("public"),
        },
    ],
}
