src/snapshots/cargo_semver_checks__query__tests__struct_with_pub_fields_changed_type.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/struct_becomes_enum/": [
        {
            "current_typename": String("Enum"),
            "name": String("PubFieldTuple"),
            "path": List([
                String("struct_becomes_enum"),
                String("PubFieldTuple"),
            ]),
            "span_begin_line": Uint64(14),
            "span_filename": String("src/lib.rs"),
            "struct_type": String("tuple"),
            "struct_typename": String("Struct"),
            "visibility_limit": String("public"),
        },
        {
            "current_typename": String("Enum"),
            "name": String("PubFieldStruct"),
            "path": List([
                String("struct_becomes_enum"),
                String("PubFieldStruct"),
            ]),
            "span_begin_line": Uint64(18),
            "span_filename": String("src/lib.rs"),
            "struct_type": String("plain"),
            "struct_typename": String("Struct"),
            "visibility_limit": String("public"),
        },
    ],
}
